fix: move creator coin info to second profile info line on mobile to … (#390)
* fix: move creator coin info to second profile info line on mobile to fix overflow issues

* Passed template through on other follow button instance

* Fixed edge cases where template not passed in

* fix: update event property used by diamond selector to be more browser-agnostic

* Remove comment

* Remove comment

* fix: removed all event.path references

* Switched order of follow - coin price divs on mobile feed

* Allow pointer events through diamond drag container

* Update to padding

* Fixed unfollow button causing new row, put spinner on same row, increased margins on second row

* Fix follow button component to not break other usgaes

* Update classes

* Updated margin class

* Update src/app/follow-button/follow-button.component.html

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2616,6 +2616,7 @@ input {
     left: 0;
     right: 0;
     display: block;
+    pointer-events: none;
   }
 
   .diamond-mobile-drag-instructions {
@@ -2654,6 +2655,7 @@ input {
     top: 40px;
     z-index: 1;
     background: transparent;
+    pointer-events: all;
   }
 }
 
@@ -2718,4 +2720,31 @@ input {
   -khtml-user-select: none; /* Konqueror HTML */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
+}
+
+.desktop-creator-coin-info {
+  @media (max-width: 992px) {
+    display: none;
+  }
+  display: inline;
+}
+
+.mobile-creator-coin-info {
+  @media (max-width: 992px) {
+    display: inline;
+    margin-left: 0px;
+    padding-left: 0px;
+  }
+  display: none;
+}
+
+.creator-coin-info {
+  @media (max-width: 992px) {
+    padding-left: 0rem !important;
+    padding-right: 0rem !important;
+    margin-left: 0rem !important;
+  }
+  padding-left: .5rem !important;
+  padding-right: .5rem !important;
+  margin-left: .5rem !important;
 }
